--- a/public/index.html
+++ b/public/index.html
@@ -42,8 +42,6 @@
     <div class="jumbotron text-center">
         <div class="overlay">
         </div>
-        <div class="background-image">
-        </div>
         <div class="caption">
             <h1>Mongo/Mongoose Scraper</h1>
             <p>New York Times Edition</p>
@@ -63,7 +61,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/4.4.0/bootbox.min.js"></script>
-    <script src="assets/javascript/index.js"></script>
+    <script src="app.js"></script>
 
 
 
@@ -72,3 +70,7 @@
 </body>
 
 </html>
+
+
+
+
