--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
                     <a class="nav-link" href="/saved">Saved Articles</a>
                 </li>
                 <li class="nav-item">
-                    <a class="btn btn-danger scrape-new">SCRAPE NEW ARTICLES!</a>
+                    <a class="btn btn-danger scrape-new" id="btnScrape">SCRAPE NEW ARTICLES!</a>
                 </li>
                 <li class="nav-item">
                     <a class="btn btn-danger clear">CLEAR ARTICLES!</a>
@@ -48,7 +48,9 @@
         </div>
     </div>
     <div class="container-fluid article-container">
+        <div class="allCards">
 
+        </div>
 
     </div>
 
