--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
                     <a class="btn btn-danger scrape-new" id="btnScrape">SCRAPE NEW ARTICLES!</a>
                 </li>
                 <li class="nav-item">
-                    <a class="btn btn-danger clear">CLEAR ARTICLES!</a>
+                    <a class="btn btn-danger clear" id="btnClear">CLEAR ARTICLES!</a>
                 </li>
             </ul>
         </div>
